--- a/configuration.properties
+++ b/configuration.properties
@@ -2,5 +2,5 @@ browser=chrome
 env=https://login1.nextbasecrm.com
 username=guluzadeferid@gmail.com
 SearchValue=apple
-registration.form.url=https://practice.cybertekschool.com/registration_form
+registration.form.url=https://practice.cydeo.com/registration_form
 
